--- a/Autosnort - Debian/full_autosnort.conf
+++ b/Autosnort - Debian/full_autosnort.conf
@@ -63,7 +63,7 @@ snort_mysql_pass=''
 #If "ui_inst" is set to 2, THIS VARIABLE MUST BE SET.
 ##Options##
 #r_dbase=1: You have a remote database you would like barnyard 2 to log to. If this option is selected, fill out rdb_user, rdb_name, rdb_host, and rdb_pass_1 options below.
-#r_dbase=2: Select this option if you will not being configuring any sort of output mechanism at all.
+#r_dbase=2: Select this option if you wish to set up syslog_full output, or no output mechanism at all.
 #default setting: blank (ui_inst default is 1, this variable shouldn't be checked if a web console is being installed.)
 r_dbase=
 
