--- a/Autosnort - Ubuntu/full_autosnort.conf
+++ b/Autosnort - Ubuntu/full_autosnort.conf
@@ -16,8 +16,8 @@ ui_inst=1
 # This sets the root mysql user's password.
 ##Options##
 # Enter a passphrase below, encased in single quotes.
-# DO NOT USE single quotes anywhere in your actual password (''), double quotes (""), back ticks (``), ampersands (&) or spaces ( ); they will cause problems.
-# Example:root_mysql_pass='Bl_;_dZ2S.h?z71A4*f!NF+v3-WY' means the password will be: Bl_;_dZ2S.h?z71A4*f!NF+v3-WY
+# DO NOT USE single quotes anywhere in your actual password (''), double quotes (""), back ticks (``), ampersands (&), semi-colons (;) or spaces ( ) -- they will break the script in fun and unique ways.
+# Example:root_mysql_pass='Bl__dZ2S.h?z71A4*f!NF+v3-WY' means the password will be: Bl__dZ2S.h?z71A4*f!NF+v3-WY
 root_mysql_pass=''
 
 
@@ -54,8 +54,8 @@ o_code=
 # If you are installing a web based IDS event review console, please enter a password here; this will be the actual user your web application will use to perform database access. 
 ##Options##
 # Enter a passphrase below, encased in single quotes.
-# DO NOT USE single quotes anywhere in your actual password (''), double quotes (""), back ticks (``), ampersands (&) or spaces ( ); they have special meaning to the shell or shell tools, and will cause problems.
-# Example:snort_mysql_pass='Bl_;_dZ2S.h?z71A4*f!NF+v3-WY' means the password will be: Bl_;_dZ2S.h?z71A4*f!NF+v3-WY
+# DO NOT USE single quotes anywhere in your actual password (''), double quotes (""), back ticks (``), ampersands (&), semi-colons (;) or spaces ( ) -- they will break the script in fun and unique ways.
+# Example:snort_mysql_pass='Bl__dZ2S.h?z71A4*f!NF+v3-WY' means the password will be: Bl__dZ2S.h?z71A4f!NF+v3-WY
 snort_mysql_pass=''
 
 ##r_dbase##
@@ -86,9 +86,10 @@ rdb_pass_1=
 # ui_choice=3: Installs the open-source BASE Intrusion Event Web Interface. An old, reliable web interface with the unique ability to export intrusion event packet data to pcaps directly from the web interface.
 # ui_choice=4: Configures barnyard2 to forward events via syslog to a remote syslog server, or SIEM of your choice over port 514/udp.
 # ui_choice=5: Installs Snorby, an open-source Intrusion Event Web Interface, teeming with features.
-# ui_choice=6: Installs no output interface at all. Select this option if you configured your sensor to report events to a remote database, or you you don't want to configure any Intrusion Event output mechanisms (e.g. you just wanted to install snort and barynard 2)
-# default setting: ui_choice=5 (Everyone seems to want Snorby.)
-ui_choice=5
+# ui_choise=6: Installs sguil, an open-source Intrusion event service, written in TCL. You'll need to install the client on your workstation for access to the event data.
+# ui_choice=7: Installs no output interface at all. Select this option if you configured your sensor to report events to a remote database, or you you don't want to configure any Intrusion Event output mechanisms (e.g. you just wanted to install snort and barynard 2)
+# default setting: ui_choice=6 (Snorby is broken and actually no longer under active development. The default has been switched to sguil.)
+ui_choice=6
 
 ##reboot_choice##
 # This option specifies whether or not you want to reboot your system immediately after autosnort is finished. System reboot is highly recommended; some of the web interfaces will not work properly until the system has been rebooted.
